fixed and added dark mode styling

--- a/src/components/reports/process.scss
+++ b/src/components/reports/process.scss
@@ -71,7 +71,7 @@
             background-color: #aa7af0;
             border-radius: 50%;
             margin-right: 20px;
-            box-shadow: 4px 2px 8px 0px rgba(0, 0, 0, 0.3);
+            box-shadow: 2px 2px 8px 0px rgba(153, 153, 153, 0.47);
 
             .icon-title {
               width: 30px;
@@ -89,7 +89,7 @@
           .body-title {
             font-size: 18px;
             font-weight: 500;
-            color: #333;
+            color: #999;
             margin-right: 20px;
             font-family: 'Inter', sans-serif;
           }
@@ -118,7 +118,7 @@
             background-color: #aa7af0;
             border-radius: 50%;
             margin-right: 20px;
-            box-shadow: 4px 2px 8px 0px rgba(0, 0, 0, 0.3);
+            box-shadow: 2px 2px 8px 0px rgba(153, 153, 153, 0.47);
 
             .icon-title {
               width: 30px;
@@ -135,7 +135,7 @@
           .body-title {
             font-size: 18px;
             font-weight: 500;
-            color: #333;
+            color: #999;
             margin-right: 20px;
             font-family: 'Inter', sans-serif;
           }
@@ -179,8 +179,7 @@
             background-color: #aa7af0;
             border-radius: 50%;
             margin-right: 20px;
-            box-shadow: 4px 2px 8px 0px rgba(0, 0, 0, 0.3);
-
+            box-shadow: 2px 2px 8px 0px rgba(153, 153, 153, 0.47);
             .icon-title {
               width: 30px;
               height: 30px;
@@ -197,7 +196,7 @@
           .body-title {
             font-size: 18px;
             font-weight: 500;
-            color: #333;
+            color: #999;
             margin-right: 20px;
             font-family: 'Inter', sans-serif;
           }
